minor spacing fixes

--- a/src/modules/FeaturedWork/FeaturedWork.css
+++ b/src/modules/FeaturedWork/FeaturedWork.css
@@ -2,3 +2,13 @@
     background-color: rgb(0, 8, 38);
     color: white;
 }
+
+.card {
+    max-width: 500px;
+}
+
+@media (max-width: 750px){
+    .card {
+        max-width: none;
+    }
+}
