--- a/src/modules/Parts/Delivery/Delivery.css
+++ b/src/modules/Parts/Delivery/Delivery.css
@@ -132,6 +132,10 @@ h4 {
     margin-right: 1rem;
 }
 
+.body-text > ul > li {
+    padding: .15rem;
+}
+
 .body-content {
     align-self: center;
     width: 100%;
